--- a/rimijoker.html
+++ b/rimijoker.html
@@ -1,22 +1,44 @@
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cd (Enter Github username here)/About_Me
-<span id="a">(Enter Github username here)@Enigma</span>:<span id="b">~</span
-><span id="c">$</span> cat (Enter name here).txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" This is (Enter Github
-username here).
-<p>Welcome</p>
-<p>
-  I am a (fill tech role here) engineer, you can checkout my resume here.
-  <a href="#Link"> Resume</a>
-</p>
-<p>
-  I usally waste my time doing cool projects.<br /><br /><br />You can checkout
-  my projects on my resume, but if you are more tech savy, here is my
-  <a href="#link"> GitHub</a> link.
-</p>
-<p>You can visit my LinkedIn, here: <a href="#link">LinkedIn</a> <br /></p>
-
-You can also contact me through email, feel free to send me an email at
-<a href = "mailto: XXXXXXXXX@XXXXX.com">"XXXXXXXXX@XXXXX.com"</a>.
-
-<p>Cheers!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Syed Akram@Enigma:~</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="console">
+    <p><span id="a">SyedAkram@Enigma</span>:<span id="b">~</span><span id="c">$</span> cd SyedAkram/About_Me</p>
+    <p><span id="a">SyedAkram@Enigma</span>:<span id="b">~/About_Me</span><span id="c">$</span> cat SyedAkram.txt</p>
+    <br>
+    <p><span id="k">Hey there, nice to see you here.</span> This is Syed Akram.</p>
+    <p>Welcome!</p>
+    <p>
+      I am an Electronics Engineer specializing in FPGA architecture and control systems. You can check out my resume here:
+      <a href="path_to_your_resume.pdf" target="_blank">Resume</a>
+    </p>
+    <p>
+      I usually spend my time working on cool projects, including:
+      <ul>
+        <li><strong>SemiX:</strong> A comprehensive semiconductor physics library modeling diodes, transistors, and MOSFETs with deep material-level accuracy.</li>
+        <li><strong>ControlX:</strong> A Python library for simulating and visualizing control systems, supporting PID, LQR, and adaptive control.</li>
+        <li><strong>eMachineX:</strong> An electric machine and inverter simulation tool supporting various motor types and inverter modeling.</li>
+        <li><strong>FPGA-Based Model Predictive Control:</strong> A fully synthesized FPGA design for real-time Model-Based Predictive Control, achieving ultra-low-latency control for embedded applications.</li>
+      </ul>
+    </p>
+    <p>
+      If you're more tech-savvy, feel free to explore my projects on
+      <a href="https://github.com/YourGitHubUsername" target="_blank">GitHub</a>.
+    </p>
+    <p>
+      You can also visit my LinkedIn profile here:
+      <a href="https://www.linkedin.com/in/YourLinkedInProfile" target="_blank">LinkedIn</a>
+    </p>
+    <p>
+      Feel free to send me an email at
+      <a href="mailto:youremail@example.com">youremail@example.com</a>.
+    </p>
+    <p>Cheers!</p>
+  </div>
+</body>
+</html>
